// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node renders at the given position and size 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
</div>

`;

exports[`Node renders connectors on the left and right 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
  <Connector
    id="myNode"
    type={0}
    position={
      Object {
        "x": 0,
        "y": 150
      }
    }
  >
  </Connector>
  <Connector
    id="myNode"
    type={1}
    position={
      Object {
        "x": 200,
        "y": 150
      }
    }
  >
  </Connector>
</div>

`;

exports[`Node renders connectors on the top and bottom 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
  <Connector
    id="myNode"
    type={0}
    position={
      Object {
        "x": 100,
        "y": 0
      }
    }
  >
  </Connector>
  <Connector
    id="myNode"
    type={1}
    position={
      Object {
        "x": 100,
        "y": 300
      }
    }
  >
  </Connector>
</div>

`;

exports[`Node renders without any connectors 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
</div>

`;

exports[`Node visibleConnectorTypes renders connector only for input 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
  <Connector
    id="myNode"
    type={0}
    position={
      Object {
        "x": 0,
        "y": 150
      }
    }
  >
  </Connector>
</div>

`;

exports[`Node visibleConnectorTypes renders connector only for output 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
  <Connector
    id="myNode"
    type={1}
    position={
      Object {
        "x": 200,
        "y": 150
      }
    }
  >
  </Connector>
</div>

`;

exports[`Node visibleConnectorTypes renders input & output connectors 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
  <Connector
    id="myNode"
    type={0}
    position={
      Object {
        "x": 0,
        "y": 150
      }
    }
  >
  </Connector>
  <Connector
    id="myNode"
    type={1}
    position={
      Object {
        "x": 200,
        "y": 150
      }
    }
  >
  </Connector>
</div>

`;

exports[`Node visibleConnectorTypes renders no connectors 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="dm-node"
  style="width: 200px; height: 300px; transform: translate3d(400px, 600px, 0);"
  data-id="myNode"
  data-type="DiagramMaker.Node"
  data-event-target={true}
  data-draggable={true}
>
  <ComposeView
    renderCallback={[Function mockConstructor]}
    destroyCallback={[Function mockConstructor]}
  >
  </ComposeView>
</div>

`;
